--- a/index.html
+++ b/index.html
@@ -4,43 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boulder Brothers</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: 'Oswald', sans-serif;
-      /* Rock texture background blended with gradient */
-      background: 
-        linear-gradient(160deg, rgba(217,217,217,0.9) 0%, rgba(126,143,124,0.8) 50%, rgba(255,102,0,0.8) 100%),
-        url('https://www.transparenttextures.com/patterns/concrete-wall.png'); 
-      background-size: cover;
-      background-blend-mode: overlay;
-    }
-    .teaser {
-      text-align: center;
-      font-size: 3rem;
-      line-height: 1.3;
-      letter-spacing: 2px;
-      color: #000000;
-      text-transform: uppercase;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
-    }
-    .highlight-green {
-      color: #2E8B57; /* earthy green */
-    }
-    .highlight-orange {
-      color: #FF6600; /* bold orange */
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="teaser">
-    <span class="highlight-green">Build Together.</span><br>
-    <span class="highlight-orange">Climb Together.</span>
+  <div class="page">
+    <!-- Logo -->
+    <header>
+      <img src="logo.png" alt="Boulder Brothers Logo" class="logo">
+    </header>
+
+    <!-- Main Text -->
+    <main>
+      <h1 class="build">BUILD TOGETHER.</h1>
+      <h1 class="climb">CLIMB TOGETHER.</h1>
+      <p class="coming-soon">Coming Soon...</p>
+    </main>
   </div>
 </body>
 </html>
