--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Boulder Brothers</title>
-  <!-- Google Font: Montserrat Extra Bold -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet" />
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="page">
-    <!-- Logo -->
-    <header>
-      <img src="logo.png" alt="Boulder Brothers Logo" class="logo">
-    </header>
+  <!-- Fixed top-left logo -->
+  <header class="site-header">
+    <!-- If your logo has a white box (non-transparent), keep class="logo logo-blend".
+         If you upload a transparent PNG, remove 'logo-blend' so it looks crisp. -->
+    <img src="logo.png" alt="Boulder Brothers Logo" class="logo logo-blend" />
+  </header>
 
-    <!-- Main Text -->
-    <main>
-      <h1 class="build">BUILD TOGETHER.</h1>
-      <h1 class="climb">CLIMB TOGETHER.</h1>
-      <p class="coming-soon">Coming Soon...</p>
-    </main>
-  </div>
+  <main class="hero">
+    <h1 class="build">BUILD TOGETHER.</h1>
+    <h1 class="climb">CLIMB TOGETHER.</h1>
+    <p class="coming-soon">Coming Soon...</p>
+  </main>
 </body>
 </html>
