--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <body>
   <!-- Fixed top-left logo -->
   <header class="site-header">
-    <!-- If your logo has a white box (non-transparent), keep class="logo logo-blend".
-         If you upload a transparent PNG, remove 'logo-blend' so it looks crisp. -->
-    <img src="logo.png" alt="Boulder Brothers Logo" class="logo logo-blend" />
+    <!-- Make sure the file in your repo is named EXACTLY 'logo.png' and is in the same folder as index.html -->
+    <img src="logo.png" alt="Boulder Brothers Logo" class="logo" />
   </header>
 
   <main class="hero">
