--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Fixed top-left logo -->
+  <!-- fixed logo (top-left) -->
   <header class="site-header">
     <img src="logo.png" alt="Boulder Brothers Logo" class="logo" />
   </header>
