--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- fixed logo -->
+  <!-- top-left header -->
   <header class="site-header">
     <img src="logo.png" alt="Boulder Brothers Logo" class="logo" />
+    <a class="cta" href="mailto:info@boulderbrotherswalls.com?subject=Get%20a%20Quote">Get a Quote</a>
   </header>
 
+  <!-- center slogans -->
   <main class="hero">
     <h1 class="build">BUILD TOGETHER.</h1>
     <h1 class="climb">CLIMB TOGETHER.</h1>
   </main>
+
+  <!-- bottom-center note -->
+  <footer class="footer-note">More coming soon...</footer>
 </body>
 </html>
