--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- top-left header -->
+  <!-- top-left logo -->
   <header class="site-header">
     <img src="logo.png" alt="Boulder Brothers Logo" class="logo" />
-    <a class="cta" href="mailto:info@boulderbrotherswalls.com?subject=Get%20a%20Quote">Get a Quote</a>
   </header>
+
+  <!-- top-right CTA button -->
+  <div class="cta">Get a Quote</div>
 
   <!-- center slogans -->
   <main class="hero">
