--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <!-- top-right CTA button -->
   <div class="cta">Get a Quote</div>
 
+<a href="designer.html" class="cta" style="margin-left: 12px;">Wall Designer</a>
+
   <!-- center slogans -->
   <main class="hero">
     <h1 class="build">BUILD TOGETHER.</h1>
