--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <!-- top-right CTA button -->
   <div class="cta">Get a Quote</div>
 
-<a href="designer.html" class="cta" style="margin-left: 12px;">Wall Designer</a>
+<!-- Non-functional button (same styling as before) -->
+<a href="#" class="cta-btn" onclick="return false;">Quote</a>
+
 
   <!-- center slogans -->
   <main class="hero">
