--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </main>
 
   <!-- bottom-center note -->
-  <footer class="footer-note">More coming soon...</footer>
+  <footer class="footer-note">Boulder Brothers - Solving Problems Since 2008</footer>
 </body>
 </html>
 <!-- reissue-ssl -->
