--- a/faq.html
+++ b/faq.html
@@ -22,6 +22,7 @@
     <p class="about-text">Here you’ll find answers to common questions about our custom climbing walls.</p>
   </main>
 
-  <footer class="footer-note">Thanks for visiting!</footer>
+  <footer class="footer-note">Boulder Brothers - Solving Problems Since 2008</footer>
 </body>
 </html>
+
