--- a/index.html
+++ b/index.html
@@ -13,17 +13,12 @@
     <img src="logo.png" alt="Boulder Brothers Logo" class="logo" />
   </header>
 
-  <!-- top-right CTA button -->
+  <!-- top-right actions: Home | FAQ | Get a Quote -->
+<nav class="top-actions">
+  <a class="nav-pill" href="index.html">Home</a>
+  <a class="nav-pill" href="faq.html">FAQ</a>
   <div class="cta">Get a Quote</div>
-
-  <!-- top-right CTA button -->
-  <div class="cta">Get a Quote</div>
-
-  <!-- add link to FAQ page -->
-  <nav class="site-nav">
-    <a href="faq.html">FAQ</a>
-  </nav>
-
+</nav>
 
 
   <!-- center slogans -->
