--- a/faq.html
+++ b/faq.html
@@ -12,10 +12,12 @@
     <img src="logo.png" alt="Boulder Brothers Logo" class="logo" />
   </header>
 
-  <!-- simple nav link back to home -->
-  <nav class="site-nav">
-    <a href="index.html">Home</a>
-  </nav>
+  <!-- top-right actions: Home | FAQ | Get a Quote -->
+<nav class="top-actions">
+  <a class="nav-pill" href="index.html">Home</a>
+  <a class="nav-pill" href="faq.html">FAQ</a>
+  <div class="cta">Get a Quote</div>
+</nav>
 
   <main class="hero">
     <h1 class="build">FREQUENTLY ASKED QUESTIONS</h1>
@@ -25,4 +27,5 @@
   <footer class="footer-note">Boulder Brothers - Solving Problems Since 2008</footer>
 </body>
 </html>
+
 
