--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </main>
 
   <!-- bottom-center note -->
-  <footer class="footer-note">Boulder Brothers - Solving Problems Since 2008</footer>
+  <footer class="footer-note">Solving Problems Since 2008</footer>
 </body>
 </html>
 <!-- reissue-ssl -->
