--- a/faq.html
+++ b/faq.html
@@ -24,8 +24,9 @@
     <p class="about-text">Here you’ll find answers to common questions about our custom climbing walls.</p>
   </main>
 
-  <footer class="footer-note">Boulder Brothers - Solving Problems Since 2008</footer>
+  <footer class="footer-note">Solving Problems Since 2008</footer>
 </body>
 </html>
+
 
 
