--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <nav class="top-actions">
   <a class="nav-pill" href="index.html">Home</a>
   <a class="nav-pill" href="faq.html">FAQ</a>
-  <div class="cta">Get a Quote</div>
+  <a class="cta" href="contact.html">Get a Quote</a>
 </nav>
 
 
