--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
 <nav class="top-actions">
   <a class="nav-pill" href="index.html">Home</a>
   <a class="nav-pill" href="faq.html">FAQ</a>
-  <div class="cta">Get a Quote</div>
+  <a class="cta" href="contact.html">Get a Quote</a>
 </nav>
 
   <main class="hero">
@@ -27,6 +27,7 @@
   <footer class="footer-note">Solving Problems Since 2008</footer>
 </body>
 </html>
+
 
 
 
